Fixed footer so that it isn't always visible

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -3,5 +3,9 @@
     background: green;
     text-align: center;
     padding: 10px;
-    
+    position: relative;
+}
+
+#address {
+    color: yellow;
 }
